Closed Bug 59451 Opened 24 years ago Closed 24 years ago

Custom installer's license.txt doesn't appear (WinNT&Win2000)

Categories

(SeaMonkey :: Installer, defect, P3)

x86
Windows NT

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bmartin, Assigned: ssu0262)

Details

(Whiteboard: [rtm++])

Attachments

(2 files)

Latest N6 CCK build dated: 2000-11-06-12 O/S: WinNT4.0 and Win2000 Steps: 1.Download, extract, and install contents of latest CCKInstaller.zip 2.Launch CCK 3.Create a customized build with CD Autorun Shell 4.Burn the customized build to a CDR 5.Launch the customized build's installer. 6.Proceed to the Software license Agreement dialog Results: The License.txt is not displayed.
Marking M20 for tracking N6 CCK RTM
Target Milestone: --- → M20
I dont understand this bug. where are we collecting the license.txt and where should we be displaying it?
The license.txt should live within the setup.exe (and N6Setup.exe). When this file is run, it's contents should be extracted to the system Temp\ directory.
Re-assigning to jpatel. The license.txt should be there in the N6Setup.zip
Assignee: varada → jpatel
re-assigning to Varada... the license file is included in the customized N6 build. However, the new setup.exe's config.ini is not displaying it in the License Agreement installer screen
Assignee: jpatel → varada
The license.txt file will appear in the License Agreement installer screen on Win95/98/Me systems.... this bug only exists on NT and 2000
I created a build without the CD Autorun shell and the license.txt file doesn't appear in the installer on all win32 platforms.
Brent and I have found the problem and the fix for this bug. We're working on checking it in right now.
The problem was that the fopen() command was attempting to open the license file in a Read/Write mode, but since the CD is readonly, it fails. The fix is very simple and safe. Instead of opening the license file with "r+b", use "rb" instead. (see patch above) Reassigning this bug to myself. (r=bmartin,sgehani)
Assignee: varada → ssu
Component: CCK-Wizard → Installer
Keywords: rtm
Product: CCK → Browser
Mucho Obrigado to you Monsieur SU if you can get this checked in ASAP.
sr=mscott
I tested Sean's fix and have found the following: The license.txt is not displayed on Win95/98/Me when the custom N6 CD Image doesn't include the CD Autorun shell. A customized build that doesn't contain the CD Autorun shell will have all the .xpi, readme.txt, license.txt, autorun.inf files exposed at the root of the CD media along with the installer's setup.exe. If the custom N6 build includes a CD Autorun shell, the license will be display just fine on all Win32 platforms.
I'm attaching a second patch that will contain the fix for the problem of setup.exe being at the root of the CD and the first problem. The fix is now a 2 line change. The second issue was because the code was appending an additional '\\' to the license.txt path. This confused windows 9x OSes. The fix is to call AppendBackSlash() that has logic in checking for trailing '\\'.
Status: NEW → ASSIGNED
I have verified that the 2nd patch works on all Win32 platforms.
sr=mscott on the 2nd patch.
Can you help me to understand? Does CCK ship from the MN6 branch and include a Netscape 6 RTM build?
CCK uses the the bits from the Netscape 6 RTM release built on the branch.
N6 CCK RTM should ship with the Windows 2000-11-08-01-MN6 bits containing Sean's fix to this bug.
r=sgehani for 2nd patch.
per pdt, marking rtm++. Once checked in, please specify which build (on MN6 branch) has this fix. I assume we want this fix to the trunk as well. granrose, do you suggest we branch or tag or do anything for this fix?
Whiteboard: [rtm++]
I presume we're going to want to make a CCK RTM tag when the time comes for cck to ship.
fix checked into the trunk and Netscape_20000922_BRANCH tag.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Marking this Verified Fixed in latest N6 CCK RTM build dated: 2000-11-16-21
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: