fixing bug #59451 - Custom installer's license.txt doesn't appear (WinNT&Win2000).  sr=mscott, r=sgehani.  affects windows platforms only.